# 2025_20695838

./: .gitignore  README.md  adder_8h.html  adder_8h.js  adder_8h_source.html  git-cheat-sheet.txt  globals.html  globals_func.html  hi_and_date.cmd  index.html  navtreeindex0.js
.github/workflows/: doxygen-deploy.yml
Worksheet3/: adder.h  hello.c
Worksheet4/Calc/: CMakeLists.txt  README_dynamic.txt  calc.cpp
Worksheet4/hello_cmake/: CMakeLists.txt
Worksheet5/: CMakeLists.txt  adder.h
Worksheet6/worksheet6_qt/: CMakeLists.txt  ModelPartList.cpp  ModelPartList.h  mainwindow.ui  optiondialog.cpp  optiondialog.h  optiondialog.ui
Worksheet6/worksheet6_qt/New_Worksheet6/: CMakeLists.txt  ModelPart.cpp  ModelPart.h  mainwindow.cpp  mainwindow.h  mainwindow.ui  optiondialog.cpp
Worksheet7/Exercise1/: CMakeLists.txt
Worksheet7/Exercise2/: CMakeLists.txt
Worksheet7/Exercise3/: CMakeLists.txt  ModelPart.cpp  ModelPart.h  main.cpp  mainwindow.cpp  mainwindow.h  mainwindow.ui  optiondialog.h
search/: all_0.js  functions_0.js
